# CurrencyExchangeServer

./: README.md
CurrencyExchangeClient/: CMakeLists.txt
CurrencyExchangeClient/CurrencyExchangeClient/: CMakeLists.txt  CurrencyExchangeClient.cpp
CurrencyExchangeServer/: CMakeLists.txt
CurrencyExchangeServer/CurrencyExchangeServer/: CMakeLists.txt  CurrencyExchangeServer.cpp  Server.cpp  Server.h
